{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 15,
  "lineage": "5db181ad-175c-ba39-c4e0-c4c9b13559f4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129040473895:internet-gateway/igw-0056f1b8476a1c8b5",
            "id": "igw-0056f1b8476a1c8b5",
            "owner_id": "129040473895",
            "tags": {
              "Name": "lab2-igw"
            },
            "tags_all": {
              "Name": "lab2-igw"
            },
            "vpc_id": "vpc-0643ef448d58882e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.secure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129040473895:network-acl/acl-06e992964318ee346",
            "egress": [],
            "id": "acl-06e992964318ee346",
            "ingress": [],
            "owner_id": "129040473895",
            "subnet_ids": [],
            "tags": {
              "Name": "public-nacl"
            },
            "tags_all": {
              "Name": "public-nacl"
            },
            "vpc_id": "vpc-0643ef448d58882e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.secure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-014cb1747a44711d2",
            "network_acl_id": "acl-06e992964318ee346",
            "subnet_id": "subnet-0a4706cee54694597"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public_nacl",
            "aws_subnet.public_subnet",
            "aws_vpc.secure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-822297762",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06e992964318ee346",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public_nacl",
            "aws_vpc.secure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_https_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3969228071",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06e992964318ee346",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public_nacl",
            "aws_vpc.secure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2471570555",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06e992964318ee346",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public_nacl",
            "aws_vpc.secure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_ssh_deny",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1365242345",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06e992964318ee346",
            "protocol": "6",
            "rule_action": "deny",
            "rule_number": 120,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public_nacl",
            "aws_vpc.secure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129040473895:route-table/rtb-0e0de2cd1ee2aee94",
            "id": "rtb-0e0de2cd1ee2aee94",
            "owner_id": "129040473895",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0056f1b8476a1c8b5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab2-public-rt"
            },
            "tags_all": {
              "Name": "lab2-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0643ef448d58882e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.secure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094c26947b7cafabf",
            "route_table_id": "rtb-0e0de2cd1ee2aee94",
            "subnet_id": "subnet-0a4706cee54694597"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.secure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129040473895:security-group/sg-06474954b464dee48",
            "description": "Allow traffic only from public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06474954b464dee48",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-099d5a12b575ecba3"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab2-private-ec2-sg",
            "name_prefix": "",
            "owner_id": "129040473895",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0643ef448d58882e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public_ec2_sg",
            "aws_vpc.secure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129040473895:security-group/sg-099d5a12b575ecba3",
            "description": "Allow SSH from trusted IP only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099d5a12b575ecba3",
            "ingress": [
              {
                "cidr_blocks": [
                  "197.211.59.198/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab2-public-ec2-sg",
            "name_prefix": "",
            "owner_id": "129040473895",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0643ef448d58882e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.secure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129040473895:subnet/subnet-08a765865ef1e0f60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a765865ef1e0f60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "129040473895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab2-private-subnet"
            },
            "tags_all": {
              "Name": "lab2-private-subnet"
            },
            "vpc_id": "vpc-0643ef448d58882e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.secure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129040473895:subnet/subnet-0a4706cee54694597",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4706cee54694597",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "129040473895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab2-public-subnet"
            },
            "tags_all": {
              "Name": "lab2-public-subnet"
            },
            "vpc_id": "vpc-0643ef448d58882e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.secure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "secure_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129040473895:vpc/vpc-0643ef448d58882e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0425ce0fd35971c85",
            "default_route_table_id": "rtb-0177afe4aac3fa2e1",
            "default_security_group_id": "sg-0773ef542c7bb297e",
            "dhcp_options_id": "dopt-027c04b85f6737d3a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0643ef448d58882e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0177afe4aac3fa2e1",
            "owner_id": "129040473895",
            "tags": {
              "Name": "labs-secure-vpc"
            },
            "tags_all": {
              "Name": "labs-secure-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}